<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.delivery.view.DeliveryDetailsFragment">

    <TextView
        android:id="@+id/logisticCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logisticCenterSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/logistic_center"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logisticCenterName" />

    <TextView
        android:id="@+id/deliveryConfirmationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/confirm_your_delivery"
        android:textAlignment="center"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logisticCenterSubtitle" />

    <TextView
        android:id="@+id/finalDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toBottomOf="@+id/deliveryConfirmationTitle" />

    <EditText
        android:id="@+id/finalDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalDateText"
        app:layout_constraintEnd_toEndOf="@+id/finalStorageType"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalDateText" />

    <TextView
        android:id="@+id/finalHourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hour"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toBottomOf="@+id/finalDateText" />

    <EditText
        android:id="@+id/finalHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalHourText"
        app:layout_constraintEnd_toEndOf="@+id/finalStorageType"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalHourText" />

    <TextView
        android:id="@+id/finalProductsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/product"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toBottomOf="@+id/finalHourText" />

    <EditText
        android:id="@+id/finalProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalProductsText"
        app:layout_constraintEnd_toEndOf="@+id/finalStorageType"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalProductsText" />

    <TextView
        android:id="@+id/finalCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/category"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toBottomOf="@+id/finalProductsText" />

    <EditText
        android:id="@+id/finalCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalCategoryText"
        app:layout_constraintEnd_toEndOf="@+id/finalStorageType"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalCategoryText" />

    <TextView
        android:id="@+id/finalStorageTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/storage_type"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalCategoryText" />

    <EditText
        android:id="@+id/finalStorageType"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalStorageTypeText"
        app:layout_constraintStart_toEndOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toTopOf="@+id/finalStorageTypeText" />


    <TextView
        android:id="@+id/finalAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/amount"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalStorageTypeText"
        app:layout_constraintTop_toBottomOf="@+id/finalStorageTypeText" />

    <TextView
        android:id="@+id/kgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="kg"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalAmountText"
        app:layout_constraintStart_toEndOf="@+id/finalAmount"
        app:layout_constraintTop_toTopOf="@+id/finalAmountText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/finalAmount"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalAmountText"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalAmountText" />

    <TextView
        android:id="@+id/finalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/price"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/finalAmountText"
        app:layout_constraintTop_toBottomOf="@+id/finalAmountText" />

    <EditText
        android:id="@+id/finalPrice"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#8a000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/finalPriceText"
        app:layout_constraintEnd_toEndOf="@+id/finalStorageType"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/finalStorageType"
        app:layout_constraintTop_toTopOf="@+id/finalPriceText"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/confirmDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>